# clean-archi-rust

./: Cargo.toml
domain/: Cargo.toml
domain/src/model/: book.rs
domain/src/port/primary/: query.rs
domain/src/port/secondary/: books.rs
domain/src/usecase/: book_query.rs  mod.rs
infra/: Cargo.toml
infra/src/: lib.rs  main.rs  settings.rs  startup.rs  state.rs
infra/src/db/: in_memory.rs
infra/src/web/routes/: books.rs  mod.rs
infra/tests/: health_check.rs
