[package]
name = "infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "cloud-tp1-rs"
path = "src/main.rs"


[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
anyhow = "1.0.69"
config = "0.13.3"
diesel = "2.0.3"
domain = { path = "../domain", version = "0.1.0" }
serde = "1.0.156"
serde_derive = "1.0.156"
tokio = "1.26.0"

[dev-dependencies]
reqwest = "0.11.14"
